--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div>
+    <div><app-transactions-form></app-transactions-form></div>
+    <div><app-categories></app-categories></div>
+    <div class="flex justify-end"><app-transactions-table></app-transactions-table></div>
+</div>
