--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,67 @@
-<p>login works!</p>
+<div class="border rounded-xl border-cyan-600 p-5 w-[600px] mx-auto">
+  <h1 class="text-center">Login</h1>
+  <form [formGroup]="loginForm" (ngSumbit)="submitForm()">
+    <div class="flex flex-col mb-3">
+      <label for="email" class="text-slate-400 text-sm mb-3">Email</label>
+      <input
+        type="email"
+        id="email"
+        placeholder="email"
+        formControlName="email"
+        class="input bg-slate-600 outline-none border-2 py-2 px-4 rounded-lg"
+      />
+
+      <div
+        *ngIf="
+          loginForm.controls['email'].invalid &&
+          (loginForm.controls['email'].dirty ||
+            loginForm.controls['email'].touched)
+        "
+        class="text-red-500 text-xs mt-2"
+      >
+        <div *ngIf="loginForm.controls['email'].hasError('required')">
+          Please email is required
+        </div>
+        <div *ngIf="loginForm.controls['email'].hasError('email')">
+          Please enter is a not valid
+        </div>
+      </div>
+    </div>
+
+    <div class="flex flex-col">
+      <label for="password" class="text-slate-400 text-sm">Password</label>
+      <input
+        type="password"
+        id="password"
+        placeholder="password"
+        formControlName="password"
+        class="input bg-slate-600 outline-none border-2 py-2 px-4 rounded-lg mt-3"
+      />
+
+      <div
+      *ngIf="
+        loginForm.controls['password'].invalid &&
+        (loginForm.controls['password'].dirty ||
+          loginForm.controls['password'].touched)
+      "
+      class="text-red-500 text-xs mt-2"
+    >
+      <div *ngIf="loginForm.controls['password'].hasError('required')">
+        Please password is required
+      </div>
+      <div *ngIf="loginForm.controls['password'].hasError('minLength')">
+        Please pasword is min length is 6
+      </div>
+    </div>
+    </div>
+
+    <div class="flex gap-5 pt-5">
+      <button type="submit" class="bg-green-600 hover:bg-green-700 p-2 rounded-lg w-full disabled:bg-slate-400" [disabled]="!loginForm.valid">
+        Confirm
+      </button>
+      <button class="bg-red-600 hover:bg-red-700 p-2 rounded-lg w-full">
+        Cancel
+      </button>
+    </div>
+  </form>
+</div>
