--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'ngx-toastr/toastr';
 
 body{
     background: rgba($color: #000000, $alpha: 0.8);
     color: white;
 }
+
 
